--- a/Comp_472_Project.ipynb
+++ b/Comp_472_Project.ipynb
@@ -818,6 +818,132 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Sklearn implementation"
+      ],
+      "metadata": {
+        "id": "ldBK3HyC81rm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.optim import lr_scheduler\n",
+        "import torch.backends.cudnn as cudnn\n",
+        "import numpy as np\n",
+        "import torchvision\n",
+        "from torchvision import datasets, models, transforms\n",
+        "import matplotlib.pyplot as plt\n",
+        "import time\n",
+        "import os\n",
+        "from PIL import Image\n",
+        "from tempfile import TemporaryDirectory\n",
+        "from sklearn.decomposition import PCA\n",
+        "from collections import defaultdict\n",
+        "from torch.utils.data import Subset\n",
+        "\n",
+        "#dataset transformation import\n",
+        "\n",
+        "cudnn.benchmark = True\n",
+        "plt.ion()   # interactive mode\n",
+        "\n",
+        "transform = transforms.Compose([\n",
+        "    transforms.Resize((224,224)),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+        "])\n",
+        "\n",
+        "def subset_cifar10(dataset, num_per_class):\n",
+        "    class_counts = defaultdict(int)\n",
+        "    indices = []\n",
+        "    for idx, (_, label) in enumerate(dataset):\n",
+        "        if class_counts[label] < num_per_class:\n",
+        "            indices.append(idx)\n",
+        "            class_counts[label] += 1\n",
+        "    return Subset(dataset, indices)\n",
+        "\n",
+        "#Acquiring data set to train and transform into 224x224x3\n",
+        "test_set = datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
+        "train_set = datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
+        "\n",
+        "#only select 500 out of the set for train and 100 for test\n",
+        "train_subset = subset_cifar10(train_set, 500)\n",
+        "test_subset = subset_cifar10(test_set, 100)\n",
+        "\n",
+        "#dataloader\n",
+        "train_loader = torch.utils.data.DataLoader(train_subset, batch_size=64, shuffle=True, num_workers=2)\n",
+        "test_loader = torch.utils.data.DataLoader(test_subset, batch_size=64, shuffle=False, num_workers=2)\n",
+        "\n",
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "#resnet18 part\n",
+        "\n",
+        "# Load Pretrained ResNet-18\n",
+        "resnet18 = models.resnet18(pretrained=True)\n",
+        "\n",
+        "# Remove final layer (fc)\n",
+        "resnet18 = nn.Sequential(*list(resnet18.children())[:-1])\n",
+        "resnet18 = resnet18.to(device)\n",
+        "resnet18.eval()  # Set model to evaluation mode\n",
+        "\n",
+        "# Feature Extraction Function\n",
+        "def extract_features(data_loader, model, device):\n",
+        "    features = []\n",
+        "    labels = []\n",
+        "    with torch.no_grad():\n",
+        "        for inputs, lbls in data_loader:\n",
+        "            inputs = inputs.to(device)\n",
+        "            outputs = model(inputs).squeeze()  # Shape: [batch_size, 512]\n",
+        "            features.append(outputs.cpu())\n",
+        "            labels.append(lbls)\n",
+        "    return torch.cat(features), torch.cat(labels)\n",
+        "\n",
+        "# Extract Features\n",
+        "train_features, train_labels = extract_features(train_loader, resnet18, device)\n",
+        "test_features, test_labels = extract_features(test_loader, resnet18, device)\n",
+        "\n",
+        "print(f\"Train Features Shape: {train_features.shape}\")  # Expected: [5000, 512]\n",
+        "print(f\"Test Features Shape: {test_features.shape}\")    # Expected: [1000, 512]\n",
+        "\n",
+        "\n",
+        "# Apply PCA to reduce feature size from 512 to 50\n",
+        "pca = PCA(n_components=50)\n",
+        "train_features_pca = pca.fit_transform(train_features.numpy())\n",
+        "test_features_pca = pca.transform(test_features.numpy())\n",
+        "\n",
+        "print(f\"Reduced Train Features Shape: {train_features_pca.shape}\")  # Expected: [5000, 50]\n",
+        "print(f\"Reduced Test Features Shape: {test_features_pca.shape}\")    # Expected: [1000, 50]\n",
+        "\n",
+        "#-------------------------------------------------------------------------------\n",
+        "\n",
+        "# Train the Decision Tree Classifier\n",
+        "clf = DecisionTreeClassifier(criterion='gini', max_depth=50, random_state=42)\n",
+        "clf.fit(train_features_pca, train_labels.numpy())\n",
+        "\n",
+        "# Predictions\n",
+        "train_preds = clf.predict(train_features_pca)\n",
+        "test_preds = clf.predict(test_features_pca)\n",
+        "\n",
+        "# Evaluate\n",
+        "train_acc = accuracy_score(train_labels.numpy(), train_preds)\n",
+        "test_acc = accuracy_score(test_labels.numpy(), test_preds)\n",
+        "\n",
+        "print(f\"Training Accuracy: {train_acc * 100:.2f}%\")\n",
+        "print(f\"Test Accuracy: {test_acc * 100:.2f}%\")\n"
+      ],
+      "metadata": {
+        "id": "nYK9Hvk-805E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "5: Multi-Layer Perceptron (MLP)\n",
         "You can use the basic Python, Numpy, and Pytorch libraries for this part. Use the feature level test set of CIFAR-10 for all the evaluations.\n",
         "\n",
