--- a/Comp_472_Project.ipynb
+++ b/Comp_472_Project.ipynb
@@ -816,6 +816,231 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from collections import Counter\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.optim import lr_scheduler\n",
+        "import torch.backends.cudnn as cudnn\n",
+        "import numpy as np\n",
+        "import torchvision\n",
+        "from torchvision import datasets, models, transforms\n",
+        "import matplotlib.pyplot as plt\n",
+        "import time\n",
+        "import os\n",
+        "from PIL import Image\n",
+        "from tempfile import TemporaryDirectory\n",
+        "from sklearn.decomposition import PCA\n",
+        "from collections import defaultdict\n",
+        "from torch.utils.data import Subset\n",
+        "\n",
+        "#Dataset tranformation\n",
+        "\n",
+        "cudnn.benchmark = True\n",
+        "plt.ion()   # interactive mode\n",
+        "\n",
+        "transform = transforms.Compose([\n",
+        "    transforms.Resize((224,224)),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+        "])\n",
+        "\n",
+        "def subset_cifar10(dataset, num_per_class):\n",
+        "    class_counts = defaultdict(int)\n",
+        "    indices = []\n",
+        "    for idx, (_, label) in enumerate(dataset):\n",
+        "        if class_counts[label] < num_per_class:\n",
+        "            indices.append(idx)\n",
+        "            class_counts[label] += 1\n",
+        "    return Subset(dataset, indices)\n",
+        "\n",
+        "#Acquiring data set to train and transform into 224x224x3\n",
+        "test_set = datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
+        "train_set = datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
+        "\n",
+        "#only select 500 out of the set for train and 100 for test\n",
+        "train_subset = subset_cifar10(train_set, 500)\n",
+        "test_subset = subset_cifar10(test_set, 100)\n",
+        "\n",
+        "#dataloader\n",
+        "train_loader = torch.utils.data.DataLoader(train_subset, batch_size=64, shuffle=True, num_workers=2)\n",
+        "test_loader = torch.utils.data.DataLoader(test_subset, batch_size=64, shuffle=False, num_workers=2)\n",
+        "\n",
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "#resnet18 part\n",
+        "\n",
+        "# Load Pretrained ResNet-18\n",
+        "resnet18 = models.resnet18(pretrained=True)\n",
+        "\n",
+        "# Remove final layer (fc)\n",
+        "resnet18 = nn.Sequential(*list(resnet18.children())[:-1])\n",
+        "resnet18 = resnet18.to(device)\n",
+        "resnet18.eval()  # Set model to evaluation mode\n",
+        "\n",
+        "# Feature Extraction Function\n",
+        "def extract_features(data_loader, model, device):\n",
+        "    features = []\n",
+        "    labels = []\n",
+        "    with torch.no_grad():\n",
+        "        for inputs, lbls in data_loader:\n",
+        "            inputs = inputs.to(device)\n",
+        "            outputs = model(inputs).squeeze()  # Shape: [batch_size, 512]\n",
+        "            features.append(outputs.cpu())\n",
+        "            labels.append(lbls)\n",
+        "    return torch.cat(features), torch.cat(labels)\n",
+        "\n",
+        "# Extract Features\n",
+        "train_features, train_labels = extract_features(train_loader, resnet18, device)\n",
+        "test_features, test_labels = extract_features(test_loader, resnet18, device)\n",
+        "\n",
+        "print(f\"Train Features Shape: {train_features.shape}\")  # Expected: [5000, 512]\n",
+        "print(f\"Test Features Shape: {test_features.shape}\")    # Expected: [1000, 512]\n",
+        "\n",
+        "\n",
+        "# Apply PCA to reduce feature size from 512 to 50\n",
+        "pca = PCA(n_components=50)\n",
+        "train_features_pca = pca.fit_transform(train_features.numpy())\n",
+        "test_features_pca = pca.transform(test_features.numpy())\n",
+        "\n",
+        "print(f\"Reduced Train Features Shape: {train_features_pca.shape}\")  # Expected: [5000, 50]\n",
+        "print(f\"Reduced Test Features Shape: {test_features_pca.shape}\")    # Expected: [1000, 50]\n",
+        "\n",
+        "#-------------------------------------------------------------------------------\n",
+        "# Gini impurity calculation\n",
+        "def gini_impurity(labels):\n",
+        "    counts = Counter(labels)\n",
+        "    total = len(labels)\n",
+        "    impurity = 1 - sum((count / total) ** 2 for count in counts.values())\n",
+        "    return impurity\n",
+        "\n",
+        "# Split dataset\n",
+        "def split_dataset(features, labels, feature_index, threshold):\n",
+        "    left_indices = features[:, feature_index] <= threshold\n",
+        "    right_indices = ~left_indices\n",
+        "    return features[left_indices], labels[left_indices], features[right_indices], labels[right_indices]\n",
+        "\n",
+        "# Find the best split\n",
+        "def best_split(features, labels):\n",
+        "    best_gini = float('inf')\n",
+        "    best_index, best_threshold = None, None\n",
+        "    n_features = features.shape[1]\n",
+        "\n",
+        "    for feature_index in range(n_features):\n",
+        "        thresholds = np.unique(features[:, feature_index])\n",
+        "        for threshold in thresholds:\n",
+        "            _, left_labels, _, right_labels = split_dataset(features, labels, feature_index, threshold)\n",
+        "            if len(left_labels) == 0 or len(right_labels) == 0:\n",
+        "                continue\n",
+        "\n",
+        "            left_gini = gini_impurity(left_labels)\n",
+        "            right_gini = gini_impurity(right_labels)\n",
+        "            total_gini = (len(left_labels) / len(labels)) * left_gini + (len(right_labels) / len(labels)) * right_gini\n",
+        "\n",
+        "            if total_gini < best_gini:\n",
+        "                best_gini = total_gini\n",
+        "                best_index = feature_index\n",
+        "                best_threshold = threshold\n",
+        "\n",
+        "    return best_index, best_threshold, best_gini\n",
+        "\n",
+        "# Node structure\n",
+        "class Node:\n",
+        "    def __init__(self, feature_index=None, threshold=None, left=None, right=None, value=None):\n",
+        "        self.feature_index = feature_index\n",
+        "        self.threshold = threshold\n",
+        "        self.left = left\n",
+        "        self.right = right\n",
+        "        self.value = value  # Leaf node value\n",
+        "\n",
+        "# Build decision tree\n",
+        "def build_tree(features, labels, depth=0, max_depth=50):\n",
+        "    # Stopping criteria\n",
+        "    if len(set(labels)) == 1 or depth == max_depth or len(labels) == 0:\n",
+        "        most_common_label = Counter(labels).most_common(1)[0][0]\n",
+        "        return Node(value=most_common_label)\n",
+        "\n",
+        "    feature_index, threshold, _ = best_split(features, labels)\n",
+        "    if feature_index is None:\n",
+        "        most_common_label = Counter(labels).most_common(1)[0][0]\n",
+        "        return Node(value=most_common_label)\n",
+        "\n",
+        "    left_features, left_labels, right_features, right_labels = split_dataset(features, labels, feature_index, threshold)\n",
+        "    left_node = build_tree(left_features, left_labels, depth + 1, max_depth)\n",
+        "    right_node = build_tree(right_features, right_labels, depth + 1, max_depth)\n",
+        "\n",
+        "    return Node(feature_index=feature_index, threshold=threshold, left=left_node, right=right_node)\n",
+        "\n",
+        "# Prediction\n",
+        "def predict_one(node, sample):\n",
+        "    if node.value is not None:\n",
+        "        return node.value\n",
+        "    if sample[node.feature_index] <= node.threshold:\n",
+        "        return predict_one(node.left, sample)\n",
+        "    else:\n",
+        "        return predict_one(node.right, sample)\n",
+        "\n",
+        "def predict(node, features):\n",
+        "    return np.array([predict_one(node, sample) for sample in features])\n",
+        "\n",
+        "# Training the decision tree\n",
+        "root = build_tree(train_features_pca, train_labels.numpy(), max_depth=50)\n",
+        "\n",
+        "# Predictions\n",
+        "train_preds = predict(root, train_features_pca)\n",
+        "test_preds = predict(root, test_features_pca)\n",
+        "\n",
+        "# Evaluation\n",
+        "train_acc = np.mean(train_preds == train_labels.numpy())\n",
+        "test_acc = np.mean(test_preds == test_labels.numpy())\n",
+        "\n",
+        "print(f\"Training Accuracy: {train_acc * 100:.2f}%\")\n",
+        "print(f\"Test Accuracy: {test_acc * 100:.2f}%\")\n"
+      ],
+      "metadata": {
+        "id": "ZYuButbv-haR",
+        "outputId": "ad7c03f4-fcc7-4482-a09a-d4d12b65e10d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Files already downloaded and verified\n",
+            "Files already downloaded and verified\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+            "  warnings.warn(msg)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train Features Shape: torch.Size([5000, 512])\n",
+            "Test Features Shape: torch.Size([1000, 512])\n",
+            "Reduced Train Features Shape: (5000, 50)\n",
+            "Reduced Test Features Shape: (1000, 50)\n",
+            "Training Accuracy: 100.00%\n",
+            "Test Accuracy: 58.50%\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Sklearn implementation"
@@ -936,10 +1161,61 @@
         "print(f\"Test Accuracy: {test_acc * 100:.2f}%\")\n"
       ],
       "metadata": {
-        "id": "nYK9Hvk-805E"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nYK9Hvk-805E",
+        "outputId": "667e8702-0ecf-4720-ac65-a3a31d91c8fa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar-10-python.tar.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 170M/170M [00:17<00:00, 9.93MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ./data/cifar-10-python.tar.gz to ./data\n",
+            "Files already downloaded and verified\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+            "  warnings.warn(msg)\n",
+            "Downloading: \"https://download.pytorch.org/models/resnet18-f37072fd.pth\" to /root/.cache/torch/hub/checkpoints/resnet18-f37072fd.pth\n",
+            "100%|██████████| 44.7M/44.7M [00:00<00:00, 177MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train Features Shape: torch.Size([5000, 512])\n",
+            "Test Features Shape: torch.Size([1000, 512])\n",
+            "Reduced Train Features Shape: (5000, 50)\n",
+            "Reduced Test Features Shape: (1000, 50)\n",
+            "Training Accuracy: 100.00%\n",
+            "Test Accuracy: 59.10%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
