--- a/Comp_472_Project.ipynb
+++ b/Comp_472_Project.ipynb
@@ -30,6 +30,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Frankies Vat, 40218933\n",
+        "\n",
+        "Ferhaan Hawas, 40224777"
+      ],
+      "metadata": {
+        "id": "TT0lQvZ20lLU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "2: Dataset Overview\n",
         "The CIFAR-10 dataset contains 50,000 training and 10,000 test RGB images belonging to 10 object classes.\n",
         "Images are of size 32 × 32 × 3.\n",
